--- a/pages/doviz-cevirici.html
+++ b/pages/doviz-cevirici.html
@@ -150,22 +150,32 @@
     </div>
 
     <!-- Footer -->
-    <footer class="bg-dark text-white mt-5 py-4">
+    <footer class="bg-dark text-light py-4 mt-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h5><i class="bi bi-graph-up"></i> Finans Platformu</h5>
+                    <h5>Canlı Döviz Kuru</h5>
                     <p>Güncel döviz ve kripto para bilgileri için güvenilir kaynağınız.</p>
                 </div>
-                <div class="col-md-6 text-md-end">
+                <div class="col-md-4">
                     <h5>Hızlı Bağlantılar</h5>
                     <ul class="list-unstyled">
-                        <li><a href="doviz-cevirici.html" class="text-white"><i class="bi bi-chevron-right"></i> Döviz Çevirici</a></li>
-                        <li><a href="kripto-cevirici.html" class="text-white"><i class="bi bi-chevron-right"></i> Kripto Çevirici</a></li>
-                        <li><a href="canli-doviz.html" class="text-white"><i class="bi bi-chevron-right"></i> Canlı Döviz</a></li>
-                        <li><a href="kripto-piyasa.html" class="text-white"><i class="bi bi-chevron-right"></i> Kripto Piyasa</a></li>
+                        <li><a href="doviz-cevirici.html">Döviz Çevirici</a></li>
+                        <li><a href="kripto-cevirici.html">Kripto Çevirici</a></li>
+                        <li><a href="canli-doviz.html">Canlı Döviz</a></li>
+                        <li><a href="kripto-piyasa.html">Kripto Piyasa</a></li>
                     </ul>
                 </div>
+                <div class="col-md-2">
+                    <h5>İletişim</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="hakkimizda.html">Hakkımızda</a></li>
+                    </ul>
+                </div>
+            </div>
+            <hr class="mt-4">
+            <div class="text-center">
+                <p class="mb-0">&copy; 2025 Canlı Döviz Kuru Projesi. İrony Agency Tüm hakları saklıdır.</p>
             </div>
         </div>
     </footer>
