--- a/pages/canli-doviz.html
+++ b/pages/canli-doviz.html
@@ -62,127 +62,84 @@
     </nav>
 
     <!-- Ana İçerik -->
-    <div class="container mt-4">
+    <div class="container mt-5">
         <div class="row">
-            <!-- Döviz Kurları Tablosu -->
-            <div class="col-lg-8">
-                <div class="card">
-                    <div class="card-header bg-success">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <h4 class="mb-0 text-white"><i class="bi bi-currency-exchange"></i> Canlı Döviz Kurları</h4>
-                            <small id="lastUpdate" class="text-white-50"></small>
-                        </div>
-                    </div>
+            <div class="col-md-8">
+                <div class="card mb-4">
                     <div class="card-body">
+                        <h1 class="card-title">Canlı Döviz Kurları</h1>
+                        <p class="lead">Türkiye'deki güncel döviz kurlarını anlık olarak takip edin. Dolar, Euro ve diğer para birimlerinin TL karşılıklarını görüntüleyin.</p>
                         <div class="table-responsive">
                             <table class="table table-hover">
                                 <thead>
                                     <tr>
                                         <th>Para Birimi</th>
-                                        <th>Güncel Kur</th>
+                                        <th>Alış</th>
+                                        <th>Satış</th>
                                         <th>Değişim</th>
-                                        <th>Son Güncelleme</th>
                                     </tr>
                                 </thead>
-                                <tbody id="exchangeRatesTable">
-                                    <!-- JavaScript ile doldurulacak -->
+                                <tbody id="dovizKurlariTable">
+                                    <!-- Döviz kurları buraya gelecek -->
                                 </tbody>
                             </table>
                         </div>
                     </div>
                 </div>
 
-                <!-- Döviz Grafiği -->
-                <div class="col-md-8">
-                    <div class="card mb-4">
-                        <div class="card-header bg-primary text-white">
-                            <h5 class="card-title mb-0">
-                                <i class="bi bi-graph-up me-2"></i>Döviz Kuru Grafiği
-                            </h5>
-                        </div>
-                        <div class="card-body">
-                            <div class="tradingview-widget-container">
-                                <div id="tradingview_chart"></div>
-                                <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-                                <script type="text/javascript">
-                                    new TradingView.widget({
-                                        "width": "100%",
-                                        "height": 500,
-                                        "symbol": "FX:USDTRY",
-                                        "interval": "D",
-                                        "timezone": "Europe/Istanbul",
-                                        "theme": "light",
-                                        "style": "1",
-                                        "locale": "tr",
-                                        "toolbar_bg": "#f1f3f6",
-                                        "enable_publishing": false,
-                                        "allow_symbol_change": true,
-                                        "container_id": "tradingview_chart"
-                                    });
-                                </script>
-                            </div>
-                        </div>
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <h2 class="card-title">Döviz Piyasası Hakkında</h2>
+                        <p class="card-text">Döviz piyasası, farklı ülkelerin para birimlerinin alınıp satıldığı global bir piyasadır. Bu piyasada işlem gören başlıca para birimleri:</p>
+                        <ul>
+                            <li>ABD Doları (USD)</li>
+                            <li>Euro (EUR)</li>
+                            <li>İngiliz Sterlini (GBP)</li>
+                            <li>İsviçre Frangı (CHF)</li>
+                            <li>Japon Yeni (JPY)</li>
+                        </ul>
+                        <p class="card-text">Döviz kurları, ülkelerin ekonomik durumları, merkez bankalarının politikaları ve global piyasa koşullarına göre sürekli değişmektedir.</p>
                     </div>
                 </div>
             </div>
-
-            <!-- Yan Panel -->
-            <div class="col-lg-4">
-                <!-- Hızlı Dönüştürücü -->
-                <div class="card">
-                    <div class="card-header bg-info text-white">
-                        <h5 class="mb-0"><i class="bi bi-calculator"></i> Hızlı Dönüştürücü</h5>
-                    </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
                     <div class="card-body">
-                        <div class="form-floating mb-3">
-                            <input type="number" class="form-control" id="quickAmount" value="1" min="0" step="0.01">
-                            <label for="quickAmount">Miktar</label>
+                        <h3 class="card-title">Döviz Çevirici</h3>
+                        <p class="card-text">Hızlı ve kolay döviz çevirimi yapın. Tüm para birimleri arasında anlık dönüşüm yapabilirsiniz.</p>
+                        <div class="mb-3">
+                            <label for="amount" class="form-label">Miktar</label>
+                            <input type="number" class="form-control" id="amount" value="1">
                         </div>
-                        <div class="form-floating mb-3">
-                            <select class="form-select" id="quickCurrency">
-                                <!-- JavaScript ile doldurulacak -->
+                        <div class="mb-3">
+                            <label for="fromCurrency" class="form-label">Dönüştürülecek Para Birimi</label>
+                            <select class="form-select" id="fromCurrency">
+                                <!-- Para birimleri buraya gelecek -->
                             </select>
-                            <label for="quickCurrency">Para Birimi</label>
                         </div>
-                        <div class="alert alert-info">
-                            <div id="quickResult" class="text-center h5 mb-0"></div>
+                        <div class="mb-3">
+                            <label for="toCurrency" class="form-label">Hedef Para Birimi</label>
+                            <select class="form-select" id="toCurrency">
+                                <!-- Para birimleri buraya gelecek -->
+                            </select>
+                        </div>
+                        <button class="btn btn-primary w-100" onclick="convertCurrency()">Çevir</button>
+                        <div class="mt-3">
+                            <h4>Sonuç: <span id="result">0.00</span></h4>
                         </div>
                     </div>
                 </div>
 
-                <!-- Piyasa Özeti -->
-                <div class="card mt-3">
-                    <div class="card-header bg-success text-white">
-                        <h5 class="mb-0"><i class="bi bi-info-circle"></i> Piyasa Özeti</h5>
-                    </div>
+                <div class="card">
                     <div class="card-body">
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item d-flex justify-content-between align-items-center">
-                                En Yüksek Değişim
-                                <span id="highestChange" class="badge bg-success rounded-pill"></span>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center">
-                                En Düşük Değişim
-                                <span id="lowestChange" class="badge bg-danger rounded-pill"></span>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center">
-                                Ortalama Değişim
-                                <span id="averageChange" class="badge bg-primary rounded-pill"></span>
-                            </li>
+                        <h3 class="card-title">Döviz Piyasası İpuçları</h3>
+                        <ul class="list-unstyled">
+                            <li class="mb-2">✓ Piyasayı düzenli takip edin</li>
+                            <li class="mb-2">✓ Ekonomik göstergeleri inceleyin</li>
+                            <li class="mb-2">✓ Risk yönetimi yapın</li>
+                            <li class="mb-2">✓ Güvenilir kaynakları takip edin</li>
+                            <li class="mb-2">✓ Uzun vadeli planlar yapın</li>
                         </ul>
-                    </div>
-                </div>
-
-                <!-- Bilgi Kartı -->
-                <div class="card mt-3">
-                    <div class="card-header bg-primary text-white">
-                        <h5 class="mb-0"><i class="bi bi-lightbulb"></i> Bilgi</h5>
-                    </div>
-                    <div class="card-body">
-                        <p>Döviz kurları 5 dakikada bir güncellenmektedir. Veriler dünya genelindeki forex piyasalarından alınmaktadır.</p>
-                        <a href="doviz-cevirici.html" class="btn btn-outline-primary w-100">
-                            <i class="bi bi-calculator"></i> Detaylı Döviz Çevirici
-                        </a>
                     </div>
                 </div>
             </div>
@@ -197,15 +154,25 @@
                     <h5>Canlı Döviz Kuru</h5>
                     <p>Güncel döviz ve kripto para bilgileri için güvenilir kaynağınız.</p>
                 </div>
-                <div class="col-md-6 text-md-end">
+                <div class="col-md-4">
                     <h5>Hızlı Bağlantılar</h5>
                     <ul class="list-unstyled">
-                        <li><a href="doviz-cevirici.html" class="text-white"><i class="bi bi-chevron-right"></i> Döviz Çevirici</a></li>
-                        <li><a href="kripto-cevirici.html" class="text-white"><i class="bi bi-chevron-right"></i> Kripto Çevirici</a></li>
-                        <li><a href="canli-doviz.html" class="text-white"><i class="bi bi-chevron-right"></i> Canlı Döviz</a></li>
-                        <li><a href="kripto-piyasa.html" class="text-white"><i class="bi bi-chevron-right"></i> Kripto Piyasa</a></li>
+                        <li><a href="doviz-cevirici.html">Döviz Çevirici</a></li>
+                        <li><a href="kripto-cevirici.html">Kripto Çevirici</a></li>
+                        <li><a href="canli-doviz.html">Canlı Döviz</a></li>
+                        <li><a href="kripto-piyasa.html">Kripto Piyasa</a></li>
                     </ul>
                 </div>
+                <div class="col-md-2">
+                    <h5>İletişim</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="hakkimizda.html">Hakkımızda</a></li>
+                    </ul>
+                </div>
+            </div>
+            <hr class="mt-4">
+            <div class="text-center">
+                <p class="mb-0">&copy; 2025 Canlı Döviz Kuru Projesi. İrony Agency Tüm hakları saklıdır.</p>
             </div>
         </div>
     </footer>
