--- a/pages/hakkimizda.html
+++ b/pages/hakkimizda.html
@@ -153,7 +153,7 @@
                 </div>
                 <div class="col-md-6 text-md-end">
                     <h5>İletişim</h5>
-                    <p>Email: info@candovizkuru.com<br>Tel: +90 555 123 4567</p>
+                    <p>Email: info@candovizkuru.com</p>
                 </div>
             </div>
         </div>
